--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -5,7 +5,11 @@
 <!-- ========================= SECTION PAGETOP ========================= -->
 <section class="section-pagetop bg">
 <div class="container">
+	{% if 'search' in request.path %}
+<h2 class="title-page">Search Result</h2>
+	{% else %}
 	<h2 class="title-page">Our Store</h2>
+	{% endif %}
 
 </div> <!-- container //  -->
 </section>
@@ -124,6 +128,7 @@
 </header><!-- sect-heading -->
 
 <div class="row">
+	{% if products %}
 	{% for product in products %}
 	<div class="col-md-4">
 		<figure class="card card-product-grid">
@@ -145,18 +150,16 @@
 
 	</div> <!-- col.// -->
 	{% endfor %}
+	{% else %}
+	<div>
+		<h2>No Result Found. Please try again later.</h2>
+	</div>
+	{% endif %}
 
 
 
-<nav class="mt-4" aria-label="Page navigation sample">
-  <ul class="pagination">
-    <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-  </ul>
-</nav>
+
+
 
 	</main> <!-- col.// -->
 
